@@ -1,6 +1,9 @@
 0.0.2
 
 User Interface:
+- Add URL validation to Get Info and Download buttons to prevent invalid input
+- Show error dialog with supported URL formats when invalid URL is entered
+- Prevent yt-dlp from being invoked with nonsense input
 - Add column header sorting to cache ListView: click Title, Duration, or File Size to sort
 - Implement toggle between ascending and descending sort order on repeated column clicks
 - Add comprehensive right-click context menu to cache ListView with Delete, Copy operations, and Select All
